--- a/index.html
+++ b/index.html
@@ -3,66 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Calculator</title>
+    <title>Calculator</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-            font-family: Arial, sans-serif;
-        }
-        .calculator {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        input, select {
-            margin: 10px 0;
-            padding: 10px;
-            width: 100%;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
-            padding: 10px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        .result {
-            margin-top: 20px;
-            font-size: 1.2em;
-        }
+        body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f4f4f4; }
+        .calculator { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        input { width: 100%; padding: 10px; margin: 10px 0; }
+        button { width: 48%; padding: 10px; margin: 5px 1%; border: none; border-radius: 5px; cursor: pointer; }
+        #result { margin-top: 20px; font-size: 1.5em; }
     </style>
 </head>
 <body>
     <div class="calculator">
-        <h2>Simple Calculator</h2>
         <input type="number" id="num1" placeholder="Enter first number" />
         <input type="number" id="num2" placeholder="Enter second number" />
-        <select id="operation">
-            <option value="add">Add</option>
-            <option value="subtract">Subtract</option>
-            <option value="multiply">Multiply</option>
-            <option value="divide">Divide</option>
-        </select>
-        <button onclick="calculate()">Calculate</button>
-        <div class="result" id="result"></div>
+        <button onclick="calculate('add')">Add</button>
+        <button onclick="calculate('subtract')">Subtract</button>
+        <button onclick="calculate('multiply')">Multiply</button>
+        <button onclick="calculate('divide')">Divide</button>
+        <button onclick="clearFields()">Clear</button>
+        <div id="result"></div>
     </div>
     <script>
-        function calculate() {
+        function calculate(operation) {
             const num1 = parseFloat(document.getElementById('num1').value);
             const num2 = parseFloat(document.getElementById('num2').value);
-            const operation = document.getElementById('operation').value;
             let result;
+            if (isNaN(num1) || isNaN(num2)) {
+                document.getElementById('result').innerText = 'Please enter valid numbers.';
+                return;
+            }
             switch (operation) {
                 case 'add':
                     result = num1 + num2;
@@ -74,12 +43,19 @@
                     result = num1 * num2;
                     break;
                 case 'divide':
-                    result = num2 !== 0 ? num1 / num2 : 'Cannot divide by zero';
+                    if (num2 === 0) {
+                        document.getElementById('result').innerText = 'Cannot divide by zero.';
+                        return;
+                    }
+                    result = num1 / num2;
                     break;
-                default:
-                    result = 'Invalid operation';
             }
             document.getElementById('result').innerText = 'Result: ' + result;
+        }
+        function clearFields() {
+            document.getElementById('num1').value = '';
+            document.getElementById('num2').value = '';
+            document.getElementById('result').innerText = '';
         }
     </script>
 </body>
